--- a/wp-content/themes/TRDAgency/assets/css/style.css
+++ b/wp-content/themes/TRDAgency/assets/css/style.css
@@ -71,16 +71,16 @@ img {
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  color: #C7C7C7;
+  color: #09091E;
 }
 .encabezado .encabezado__menu ul li:hover, .encabezado .encabezado__menu ul li.current {
-  border: 1px solid #ACD9B2;
+  border: 1px solid #2F2C7C;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 .encabezado .encabezado__menu ul li:hover a, .encabezado .encabezado__menu ul li.current a {
-  color: #ACD9B2;
+  color: #2F2C7C;
 }
 .encabezado .encabezado__menu-responsive {
   margin-top: 10px;
@@ -131,16 +131,16 @@ img {
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  color: #C7C7C7;
+  color: #09091E;
 }
 .encabezado .encabezado__menu-responsive ul li:hover, .encabezado .encabezado__menu-responsive ul li.current {
-  border: 1px solid #ACD9B2;
+  border: 1px solid #2F2C7C;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 .encabezado .encabezado__menu-responsive ul li:hover a, .encabezado .encabezado__menu-responsive ul li.current a {
-  color: #ACD9B2;
+  color: #2F2C7C;
 }
 .encabezado .encabezado__cart {
   display: -webkit-box;
@@ -169,7 +169,7 @@ img {
   line-height: 17px;
   text-align: right;
   text-decoration: none;
-  color: #ACD9B2;
+  color: #1f034c;
   margin-right: 10px;
 }
 .encabezado .encabezado__cart .encabezado_sign-in:hover {
@@ -182,7 +182,7 @@ img {
   content: "";
   width: 10px;
   height: 10px;
-  background-color: #ACD9B2;
+  background-color: #2F2C7C;
   border-radius: 50%;
   position: absolute;
   top: 0;
@@ -323,7 +323,7 @@ a {
 .productos__card img {
   width: 100%;
   height: auto;
-  border-radius: 40px;
+  border-radius: 10px;
   -o-object-fit: contain;
      object-fit: contain;
   -o-object-position: center;
@@ -360,7 +360,7 @@ a {
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
-  color: #797979;
+  color: #09091E;
 }
 
 .producto__caption {
@@ -372,7 +372,7 @@ a {
           justify-content: space-between;
 }
 .producto__caption .productos__cart .productos__add-to-cart {
-  background-color: #ACD9B2;
+  background-color: #2F2C7C;
   padding: 15px;
   border-radius: 50%;
   width: 40px;
@@ -437,9 +437,9 @@ a {
   font-family: Quicksand;
   font-style: normal;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 17px;
-  color: #000000;
+  color: #2F2C7C;
   margin-bottom: 5px;
 }
 .signin .signin__container .signin__form .name--campo input:not([type=submit]) {
@@ -462,8 +462,8 @@ a {
 }
 .signin .signin__container .signin__form input[type=submit] {
   margin-top: 30px;
-  background: #ACD9B2;
-  border: 1px solid #ACD9B2;
+  background: #2F2C7C;
+  border: 1px solid #2F2C7C;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.0001);
@@ -523,7 +523,7 @@ footer {
   font-size: 16px;
   line-height: 17px;
   text-align: center;
-  color: #797979;
+  color: #2F2C7C;
   background-color: #0000;
   border: none;
 }
